update about page & GH URL

--- a/AppSource/project_raco/lib/l10n/app_en.arb
+++ b/AppSource/project_raco/lib/l10n/app_en.arb
@@ -18,17 +18,15 @@
     "clear": "Clear",
     "cooldown": "Cool Down",
     "gaming_pro": "Gaming Pro",
-    "about_title": "Thank you for the great people who helped improve EnCorinVest:",
+    "about_title": "Thank you for the great people who helped improve Project Raco:",
     "about_quote": "\"Great Collaboration Lead to Great Innovation\"\n~ Kanagawa Yamada (Main Dev)",
-    "about_note": "EnCorinVest Is Always Free, Open Source, and Open For Improvement",
+    "about_note": "Project Raco Is Always Free, Open Source, and Open For Improvement",
     "credits_1": "Rem01 Gaming",
-    "credits_2": "VelocityFox22",
-    "credits_3": "MiAzami",
-    "credits_4": "Kazuyoo",
-    "credits_5": "RiProG",
-    "credits_6": "Lieudahbelajar",
-    "credits_7": "KanaDev_IS",
-    "credits_8": "And All Testers That I Can't Mentioned One by One",
+    "credits_2": "MiAzami",
+    "credits_3": "Kazuyoo",
+    "credits_4": "RiProG",
+    "credits_5": "KanaDev_IS",
+    "credits_6": "And All Testers That I Can't Mentioned One by One",
     "yes": "Yes",
     "no": "No",
     "device": "Device:",
