--- a/AppSource/project_raco/lib/l10n/app_id.arb
+++ b/AppSource/project_raco/lib/l10n/app_id.arb
@@ -18,17 +18,15 @@
     "clear": "Bersihkan",
     "cooldown": "Dinginkan",
     "gaming_pro": "Pro Gaming",
-    "about_title": "Terima kasih kepada orang-orang hebat yang membantu memperbaiki EnCorinVest:",
+    "about_title": "Terima kasih kepada orang-orang hebat yang membantu memperbaiki Project Raco:",
     "about_quote": "\"Kolaborasi Hebat Mengarah pada Inovasi Hebat\"\n~ Kanagawa Yamada (Pengembang Utama)",
-    "about_note": "EnCorinVest Selalu Gratis, Sumber Terbuka, dan Terbuka untuk Peningkatan",
+    "about_note": "Project Raco Selalu Gratis, Sumber Terbuka, dan Terbuka untuk Peningkatan",
     "credits_1": "Rem01 Gaming",
-    "credits_2": "VelocityFox22",
-    "credits_3": "MiAzami",
-    "credits_4": "Kazuyoo",
-    "credits_5": "RiProG",
-    "credits_6": "Lieudahbelajar",
-    "credits_7": "KanaDev_IS",
-    "credits_8": "Dan Semua Penguji yang Tidak Bisa Disebutkan Satu per Satu",
+    "credits_2": "MiAzami",
+    "credits_3": "Kazuyoo",
+    "credits_4": "RiProG",
+    "credits_5": "KanaDev_IS",
+    "credits_6": "Dan Semua Penguji yang Tidak Bisa Disebutkan Satu per Satu",
     "yes": "Ya",
     "no": "Tidak",
     "device": "Perangkat:",
