--- a/AppSource/project_raco/lib/l10n/app_ja.arb
+++ b/AppSource/project_raco/lib/l10n/app_ja.arb
@@ -18,17 +18,15 @@
     "clear": "クリア",
     "cooldown": "冷却",
     "gaming_pro": "ゲーミングプロ",
-    "about_title": "エンコリンベストの改善に協力してくれた素晴らしい人々に感謝します:",
+    "about_title": "Project Racoの改善に協力してくれた素晴らしい人々に感謝します:",
     "about_quote": "\"偉大なコラボレーションは偉大なイノベーションにつながる\"\n~ 神奈川山田 (メイン開発者)",
-    "about_note": "エンコリンベストは常に無料、オープンソース、そして改善に開かれています",
+    "about_note": "Project Racoは常に無料、オープンソース、そして改善に開かれています",
     "credits_1": "Rem01 Gaming",
-    "credits_2": "VelocityFox22",
-    "credits_3": "MiAzami",
-    "credits_4": "Kazuyoo",
-    "credits_5": "RiProG",
-    "credits_6": "Lieudahbelajar",
-    "credits_7": "KanaDev_IS",
-    "credits_8": "名前を挙げられなかったすべてのテスター",
+    "credits_2": "MiAzami",
+    "credits_3": "Kazuyoo",
+    "credits_4": "RiProG",
+    "credits_5": "KanaDev_IS",
+    "credits_6": "名前を挙げられなかったすべてのテスター",
     "yes": "はい",
     "no": "いいえ",
     "device": "デバイス:",
