--- a/AppSource/project_raco/lib/l10n/app_ja.arb
+++ b/AppSource/project_raco/lib/l10n/app_ja.arb
@@ -29,9 +29,6 @@
     "credits_6": "名前を挙げられなかったすべてのテスター",
     "yes": "はい",
     "no": "いいえ",
-    "device": "デバイス:",
-    "cpu": "CPU:",
-    "os": "OS:",
     "utilities": "ユーティリティ",
     "utilities_title": "ユーティリティ",
     "fix_and_tweak_title": "修正と調整",
@@ -89,6 +86,11 @@
     "select_theme": "テーマを選択:",
     "theme_classic": "クラシック",
     "theme_modern": "モダン",
+    "device_name": "デバイス名",
+    "processor": "プロセッサ",
+    "ram": "RAM",
+    "phone_storage": "ストレージ",
+    "battery_capacity": "バッテリー容量",
     "custom_governor_title": "カスタムガバナー",
     "custom_governor_description": "カスタムCPUガバナーを設定します。これにより、バランスモードでガバナーが設定されます",
     "loading_governors": "ガバナーを読み込み中...",
