--- a/AppSource/project_raco/lib/l10n/app_id.arb
+++ b/AppSource/project_raco/lib/l10n/app_id.arb
@@ -83,6 +83,9 @@
     "background_settings_title": "Pengaturan Latar Belakang",
     "background_settings_description": "Sesuaikan gambar latar belakang dan opasitas aplikasi.",
     "opacity_slider_label": "Opasitas Latar Belakang",
+    "banner_settings_title": "Pengaturan Banner",
+    "banner_settings_description": "Sesuaikan gambar banner layar utama (rasio aspek 16:9).",
+    "change_banner_button": "Ubah Banner",
     "select_theme": "Pilih Tema:",
     "theme_classic": "Klasik",
     "theme_modern": "Modern",
@@ -94,6 +97,5 @@
     "custom_governor_title": "Gubernur Kustom",
     "custom_governor_description": "Atur gubernur CPU kustom, Ini akan mengatur gubernur dalam mode seimbang",
     "loading_governors": "Memuat gubernur...",
-   
- "no_governor_selected": "Tidak Ada"
+    "no_governor_selected": "Tidak Ada"
 }
