--- a/AppSource/project_raco/lib/l10n/app_ja.arb
+++ b/AppSource/project_raco/lib/l10n/app_ja.arb
@@ -83,6 +83,9 @@
     "background_settings_title": "背景設定",
     "background_settings_description": "アプリの背景画像と不透明度をカスタマイズします。",
     "opacity_slider_label": "背景の不透明度",
+    "banner_settings_title": "バナー設定",
+    "banner_settings_description": "メイン画面のバナー画像（アスペクト比16:9）をカスタマイズします。",
+    "change_banner_button": "バナーを変更",
     "select_theme": "テーマを選択:",
     "theme_classic": "クラシック",
     "theme_modern": "モダン",
