(utilities_page) initial categories

--- a/AppSource/project_raco/lib/l10n/app_en.arb
+++ b/AppSource/project_raco/lib/l10n/app_en.arb
@@ -32,6 +32,11 @@
     "no": "No",
     "utilities": "Utilities",
     "utilities_title": "Utilities",
+    "search_utilities": "Search Utilities",
+    "core_tweaks_title": "Core Tweaks",
+    "automation_title": "Automation",
+    "system_title": "System",
+    "appearance_title": "Appearance",
     "fix_and_tweak_title": "Fix and Tweak",
     "device_mitigation_title": "Device Mitigation",
     "device_mitigation_description": "Turn on if you experience screen freeze",
