--- a/AppSource/project_raco/lib/l10n/app_id.arb
+++ b/AppSource/project_raco/lib/l10n/app_id.arb
@@ -32,6 +32,11 @@
     "no": "Tidak",
     "utilities": "Utilitas",
     "utilities_title": "Utilitas",
+    "search_utilities": "Cari Utilitas",
+    "core_tweaks_title": "Tweak Inti",
+    "automation_title": "Otomatisasi",
+    "system_title": "Sistem",
+    "appearance_title": "Tampilan",
     "fix_and_tweak_title": "Perbaikan & Tweak",
     "device_mitigation_title": "Mitigasi Perangkat",
     "device_mitigation_description": "Nyalakan jika Anda mengalami layar beku",
