--- a/AppSource/project_raco/lib/l10n/app_ja.arb
+++ b/AppSource/project_raco/lib/l10n/app_ja.arb
@@ -32,6 +32,11 @@
     "no": "いいえ",
     "utilities": "ユーティリティ",
     "utilities_title": "ユーティリティ",
+    "search_utilities": "ユーティリティを検索",
+    "core_tweaks_title": "コア調整",
+    "automation_title": "自動化",
+    "system_title": "システム",
+    "appearance_title": "外観",
     "fix_and_tweak_title": "修正と調整",
     "device_mitigation_title": "デバイスの緩和",
     "device_mitigation_description": "画面のフリーズが発生した場合にオンにします",
