--- a/AppSource/project_raco/lib/l10n/app_ja.arb
+++ b/AppSource/project_raco/lib/l10n/app_ja.arb
@@ -99,5 +99,8 @@
     "custom_governor_title": "カスタムガバナー",
     "custom_governor_description": "カスタムCPUガバナーを設定します。これにより、バランスモードでガバナーが設定されます",
     "loading_governors": "ガバナーを読み込み中...",
-    "no_governor_selected": "なし"
+    "no_governor_selected": "なし",
+    "anya_thermal_title": "アーニャ・メルフィッサ サーマル無効化",
+    "anya_thermal_description": "アーニャサーマルフローステート：パフォーマンスとゲーミングモードでサーマルを無効化し、省電力、バランス、冷却モードで有効化します。",
+    "anya_thermal_toggle_title": "アーニャサーマルフローステートを有効にする"
 }
