--- a/AppSource/project_raco/lib/l10n/app_en.arb
+++ b/AppSource/project_raco/lib/l10n/app_en.arb
@@ -101,6 +101,6 @@
     "loading_governors": "Loading governors...",
     "no_governor_selected": "None",
     "anya_thermal_title": "Anya Melfissa Disable Thermal",
-    "anya_thermal_description": "Anya Thermal Flowstate: Disable Thermal on Performance and Gaming, Enable Thermal on Powersave, Balanced, Cool Down.",
+    "anya_thermal_description": "Disable Thermal on Performance and Gaming, Enable Thermal on Powersave, Balanced, Cool Down.",
     "anya_thermal_toggle_title": "Enable Anya Thermal Flowstate"
 }
