--- a/AppSource/project_raco/lib/l10n/app_id.arb
+++ b/AppSource/project_raco/lib/l10n/app_id.arb
@@ -101,6 +101,6 @@
     "loading_governors": "Memuat gubernur...",
     "no_governor_selected": "Tidak Ada",
     "anya_thermal_title": "Anya Melfissa Nonaktifkan Thermal",
-    "anya_thermal_description": "Anya Thermal Flowstate: Nonaktifkan Thermal pada mode Performa dan Gaming, Aktifkan Thermal pada mode Hemat Daya, Seimbang, dan Dinginkan.",
+    "anya_thermal_description": "Nonaktifkan Thermal pada mode Performa dan Gaming, Aktifkan Thermal pada mode Hemat Daya, Seimbang, dan Dinginkan.",
     "anya_thermal_toggle_title": "Aktifkan Anya Thermal Flowstate"
 }
