--- a/AppSource/project_raco/lib/l10n/app_ja.arb
+++ b/AppSource/project_raco/lib/l10n/app_ja.arb
@@ -102,5 +102,13 @@
     "no_governor_selected": "なし",
     "anya_thermal_title": "アーニャ・メルフィッサ サーマル無効化",
     "anya_thermal_description": "パフォーマンスとゲーミングモードではサーマルを無効化し、省電力、バランス、冷却モードではサーマルを有効化します。",
-    "anya_thermal_toggle_title": "アーニャサーマルフローステートを有効にする"
+    "anya_thermal_toggle_title": "アーニャサーマルフローステートを有効にする",
+    "system_actions_title": "システムアクション",
+    "fstrim_title": "Fstrim",
+    "fstrim_description": "Androidパーティションをトリムします。処理には時間がかかる場合がありますので、しばらくお待ちください。",
+    "clear_cache_title": "キャッシュをクリア",
+    "clear_cache_description": "デバイスのキャッシュをクリアします。",
+    "action_successful": "アクションは正常に完了しました。",
+    "action_failed": "アクションが失敗しました。",
+    "running_action": "実行中..."
 }
