--- a/AppSource/project_raco/lib/l10n/app_id.arb
+++ b/AppSource/project_raco/lib/l10n/app_id.arb
@@ -102,5 +102,13 @@
     "no_governor_selected": "Tidak Ada",
     "anya_thermal_title": "Anya Melfissa Nonaktifkan Thermal",
     "anya_thermal_description": "Nonaktifkan Thermal pada mode Performa dan Gaming, Aktifkan Thermal pada mode Hemat Daya, Seimbang, dan Dinginkan.",
-    "anya_thermal_toggle_title": "Aktifkan Anya Thermal Flowstate"
+    "anya_thermal_toggle_title": "Aktifkan Anya Thermal Flowstate",
+    "system_actions_title": "Tindakan Sistem",
+    "fstrim_title": "Fstrim",
+    "fstrim_description": "Pangkas partisi Android. Harap tunggu, proses ini mungkin memakan waktu.",
+    "clear_cache_title": "Bersihkan Cache",
+    "clear_cache_description": "Bersihkan cache perangkat.",
+    "action_successful": "Tindakan berhasil diselesaikan.",
+    "action_failed": "Tindakan gagal.",
+    "running_action": "Menjalankan..."
 }
