--- a/AppSource/project_raco/lib/l10n/app_id.arb
+++ b/AppSource/project_raco/lib/l10n/app_id.arb
@@ -106,9 +106,5 @@
     "system_actions_title": "Tindakan Sistem",
     "fstrim_title": "Fstrim",
     "fstrim_description": "Pangkas partisi Android.",
-    "clear_cache_title": "Bersihkan Cache",
-    "clear_cache_description": "Bersihkan cache perangkat. Harap tunggu, proses ini mungkin memakan waktu.",
-    "action_successful": "Tindakan berhasil diselesaikan.",
-    "action_failed": "Tindakan gagal.",
-    "running_action": "Menjalankan..."
+    "clear_cache_title": "Bersihkan Cache"
 }
