--- a/AppSource/project_raco/lib/l10n/app_ja.arb
+++ b/AppSource/project_raco/lib/l10n/app_ja.arb
@@ -106,9 +106,5 @@
     "system_actions_title": "システムアクション",
     "fstrim_title": "Fstrim",
     "fstrim_description": "Androidパーティションをトリムします。",
-    "clear_cache_title": "キャッシュをクリア",
-    "clear_cache_description": "デバイスのキャッシュをクリアします。処理には時間がかかる場合がありますので、しばらくお待ちください。",
-    "action_successful": "アクションは正常に完了しました。",
-    "action_failed": "アクションが失敗しました。",
-    "running_action": "実行中..."
+    "clear_cache_title": "キャッシュをクリア"
 }
