Credit HoyoSlave and Koneko Dev

--- a/AppSource/project_raco/lib/l10n/app_en.arb
+++ b/AppSource/project_raco/lib/l10n/app_en.arb
@@ -26,8 +26,10 @@
     "credits_2": "MiAzami",
     "credits_3": "Kazuyoo",
     "credits_4": "RiProG",
-    "credits_5": "KanaDev_IS",
-    "credits_6": "And All Testers That I Can't Mentioned One by One",
+    "credits_5": "HoyoSlave",
+    "credits_6": "Koneko_dev",
+    "credits_7": "KanaDev_IS",
+    "credits_8": "And All Testers That I Can't Mentioned One by One",
     "yes": "Yes",
     "no": "No",
     "utilities": "Utilities",
