--- a/AppSource/project_raco/lib/l10n/app_id.arb
+++ b/AppSource/project_raco/lib/l10n/app_id.arb
@@ -26,8 +26,10 @@
     "credits_2": "MiAzami",
     "credits_3": "Kazuyoo",
     "credits_4": "RiProG",
-    "credits_5": "KanaDev_IS",
-    "credits_6": "Dan Semua Penguji yang Tidak Bisa Disebutkan Satu per Satu",
+    "credits_5": "HoyoSlave",
+    "credits_6": "Koneko_dev",
+    "credits_7": "KanaDev_IS",
+    "credits_8": "Dan Semua Penguji yang Tidak Bisa Disebutkan Satu per Satu",
     "yes": "Ya",
     "no": "Tidak",
     "utilities": "Utilitas",
