--- a/AppSource/project_raco/lib/l10n/app_ja.arb
+++ b/AppSource/project_raco/lib/l10n/app_ja.arb
@@ -26,8 +26,10 @@
     "credits_2": "MiAzami",
     "credits_3": "Kazuyoo",
     "credits_4": "RiProG",
-    "credits_5": "KanaDev_IS",
-    "credits_6": "名前を挙げられなかったすべてのテスター",
+    "credits_5": "HoyoSlave",
+    "credits_6": "Koneko_dev",
+    "credits_7": "KanaDev_IS",
+    "credits_8": "名前を挙げられなかったすべてのテスター",
     "yes": "はい",
     "no": "いいえ",
     "utilities": "ユーティリティ",
