Added Background Blur

--- a/AppSource/project_raco/lib/l10n/app_en.arb
+++ b/AppSource/project_raco/lib/l10n/app_en.arb
@@ -89,8 +89,9 @@
     "mode_hamada_ai": "HamadaAI",
     "please_disable_hamada_ai_first": "Please Disable HamadaAI First",
     "background_settings_title": "Background Settings",
-    "background_settings_description": "Customize the app's background image and opacity.",
+    "background_settings_description": "Customize the app's background image, opacity, and blur effect.",
     "opacity_slider_label": "Background Opacity",
+    "blur_slider_label": "Background Blur",
     "banner_settings_title": "Banner Settings",
     "banner_settings_description": "Customize the main screen's banner image (16:9 aspect ratio).",
     "device_name": "Device name",
