--- a/AppSource/project_raco/lib/l10n/app_id.arb
+++ b/AppSource/project_raco/lib/l10n/app_id.arb
@@ -89,8 +89,9 @@
     "mode_hamada_ai": "HamadaAI",
     "please_disable_hamada_ai_first": "Harap Nonaktifkan HamadaAI Terlebih Dahulu",
     "background_settings_title": "Pengaturan Latar Belakang",
-    "background_settings_description": "Sesuaikan gambar latar belakang dan opasitas aplikasi.",
+    "background_settings_description": "Sesuaikan gambar latar belakang, opasitas, dan efek blur aplikasi.",
     "opacity_slider_label": "Opasitas Latar Belakang",
+    "blur_slider_label": "Tingkat Blur Latar",
     "banner_settings_title": "Pengaturan Banner",
     "banner_settings_description": "Sesuaikan gambar banner layar utama (rasio aspek 16:9).",
     "device_name": "Nama perangkat",
