--- a/AppSource/project_raco/lib/l10n/app_ja.arb
+++ b/AppSource/project_raco/lib/l10n/app_ja.arb
@@ -89,8 +89,9 @@
     "mode_hamada_ai": "HamadaAI",
     "please_disable_hamada_ai_first": "最初にHamadaAIを無効にしてください",
     "background_settings_title": "背景設定",
-    "background_settings_description": "アプリの背景画像と不透明度をカスタマイズします。",
+    "background_settings_description": "アプリの背景画像、不透明度、ぼかし効果をカスタマイズします。",
     "opacity_slider_label": "背景の不透明度",
+    "blur_slider_label": "背景のぼかし",
     "banner_settings_title": "バナー設定",
     "banner_settings_description": "メイン画面のバナー画像（アスペクト比16:9）をカスタマイズします。",
     "device_name": "デバイス名",
