--- a/AppSource/project_raco/lib/l10n/app_en.arb
+++ b/AppSource/project_raco/lib/l10n/app_en.arb
@@ -12,7 +12,8 @@
     "performance_desc": "Prioritizing Performance Over Battery",
     "clear_desc": "Clear RAM By Killing All Apps",
     "cooldown_desc": "Cool Down Your Device\n(Let It Rest for 2 Minutes)",
-    "gaming_desc": "Set to Performance and Kill All Apps",
+    
+"gaming_desc": "Set to Performance and Kill All Apps",
     "power_save": "Power Save",
     "balanced": "Balanced",
     "performance": "Performance",
@@ -24,7 +25,8 @@
     "about_note": "Project Raco Is Always Free, Open Source, and Open For Improvement",
     "credits_1": "Rem01 Gaming",
     "credits_2": "MiAzami",
-    "credits_3": "Kazuyoo",
+    "credits_3": 
+"Kazuyoo",
     "credits_4": "RiProG",
     "credits_5": "HoyoSlave",
     "credits_6": "Koneko_dev",
@@ -52,7 +54,7 @@
         "placeholders": {
             "resolution": {
                 "type": "String"
-            }
+      }
         }
     },
     "reset_resolution": "Reset to Original",
@@ -80,7 +82,7 @@
     "dnd_title": "DND Switch",
     "dnd_description": "Automatically Turn DND on / off",
     "dnd_toggle_title": "Enable DND Auto Switch",
-    "bypass_charging_title": "Bypass Charging",
+     "bypass_charging_title": "Bypass Charging",
     "bypass_charging_description": "Enable Bypass Charging While in Performance & Gaming Pro on Supported Device",
     "bypass_charging_toggle": "Enable Bypass Charging",
     "bypass_charging_unsupported": "Bypass charging is not supported on your device",
@@ -92,7 +94,8 @@
     "background_settings_title": "Background Settings",
     "background_settings_description": "Customize the app's background image, opacity, and blur effect.",
     "opacity_slider_label": "Background Opacity",
-    "blur_slider_label": "Background Blur",
+ 
+   "blur_slider_label": "Background Blur",
     "banner_settings_title": "Banner Settings",
     "banner_settings_description": "Customize the main screen's banner image (16:9 aspect ratio).",
     "device_name": "Device name",
@@ -110,5 +113,7 @@
     "system_actions_title": "System Actions",
     "fstrim_title": "Fstrim",
     "fstrim_description": "Trim Android partitions.",
-    "clear_cache_title": "Clear Cache"
+    "clear_cache_title": "Clear Cache",
+    "better_powersave_title": "Better Powersave",
+    "better_powersave_description": "Cap the CPU Freq to Half instead of Minimum Freq (Powersave Mode Only)"
 }
