Adapth to Non-Root editor

--- a/AppSource/project_raco/lib/l10n/app_en.arb
+++ b/AppSource/project_raco/lib/l10n/app_en.arb
@@ -59,6 +59,7 @@
     "hamada_ai_toggle_title": "Enable HAMADA AI",
     "hamada_ai_start_on_boot": "Start on Boot",
     "edit_game_txt_title": "Edit game.txt",
+    "sync_changes": "Sync Changes",
     "save_button": "Save",
     "executing_command": "Executing...",
     "command_executed": "Command executed.",
@@ -80,7 +81,7 @@
     "dnd_title": "DND Switch",
     "dnd_description": "Automatically Turn DND on / off",
     "dnd_toggle_title": "Enable DND Auto Switch",
-     "bypass_charging_title": "Bypass Charging",
+    "bypass_charging_title": "Bypass Charging",
     "bypass_charging_description": "Enable Bypass Charging While in Performance & Gaming Pro on Supported Device",
     "bypass_charging_toggle": "Enable Bypass Charging",
     "bypass_charging_unsupported": "Bypass charging is not supported on your device",
