--- a/AppSource/project_raco/lib/l10n/app_id.arb
+++ b/AppSource/project_raco/lib/l10n/app_id.arb
@@ -59,6 +59,7 @@
     "hamada_ai_toggle_title": "Aktifkan HAMADA AI",
     "hamada_ai_start_on_boot": "Mulai saat Boot",
     "edit_game_txt_title": "Edit game.txt",
+    "sync_changes": "Sinkronkan Perubahan",
     "save_button": "Simpan",
     "executing_command": "Menjalankan...",
     "command_executed": "Perintah dijalankan.",
