add (@Not_ValentineSTCV & @Andreyka4_45) to credits

--- a/AppSource/project_raco/lib/l10n/app_es.arb
+++ b/AppSource/project_raco/lib/l10n/app_es.arb
@@ -28,8 +28,10 @@
     "credits_4": "RiProG",
     "credits_5": "HoyoSlave",
     "credits_6": "Koneko_dev",
-    "credits_7": "KanaDev_IS",
-    "credits_8": "Y a todos los testers que aportaron su feedback!",
+    "credits_7": "Not_ValentineSTCV",
+    "credits_8": "Andreyka4_45",
+    "credits_9": "KanaDev_IS",
+    "credits_10": "Y a todos los testers que aportaron su feedback!",
     "yes": "Sí",
     "no": "No",
     "utilities": "Utilidades",
