--- a/AppSource/project_raco/lib/l10n/app_en.arb
+++ b/AppSource/project_raco/lib/l10n/app_en.arb
@@ -28,8 +28,10 @@
     "credits_4": "RiProG",
     "credits_5": "HoyoSlave",
     "credits_6": "Koneko_dev",
-    "credits_7": "KanaDev_IS",
-    "credits_8": "And All Testers That I Can't Mentioned One by One",
+    "credits_7": "Not_ValentineSTCV",
+    "credits_8": "Andreyka4_45",
+    "credits_9": "KanaDev_IS",
+    "credits_10": "And All Testers That I Can't Mentioned One by One",
     "yes": "Yes",
     "no": "No",
     "utilities": "Utilities",
