--- a/AppSource/project_raco/lib/l10n/app_ru.arb
+++ b/AppSource/project_raco/lib/l10n/app_ru.arb
@@ -28,8 +28,10 @@
     "credits_4": "RiProG",
     "credits_5": "HoyoSlave",
     "credits_6": "Koneko_dev",
-    "credits_7": "KanaDev_IS",
-    "credits_8": "И всем тестерам, которых я не могу упомянуть",
+    "credits_7": "Not_ValentineSTCV",
+    "credits_8": "Andreyka4_45",
+    "credits_9": "KanaDev_IS",
+    "credits_10": "И всем тестерам, которых я не могу упомянуть",
     "yes": "Да",
     "no": "Нет",
     "utilities": "Утилиты",
