--- a/AppSource/project_raco/lib/l10n/app_enc.arb
+++ b/AppSource/project_raco/lib/l10n/app_enc.arb
@@ -1,6 +1,6 @@
 {
-    "app_title": "!¡∷𝙹⋮ᒷᓵℸ ̣   Raco",
-    "by": "By: ꖌᔑリᔑ⊣ᔑ∴ᔑ  ||ᔑᒲᔑ↸ᔑ",
+    "app_title": "!¡∷𝙹⋮ᒷᓵℸ ̣ Raco",
+    "by": "By: Kanagawa Yamada",
     "root_access": "∷𝙹𝙹ℸ ̣   ᔑᓵᓵᒷᓭᓭ:",
     "module_installed": "ᒲ𝙹↸⚍ꖎᒷ  ╎リᓭℸ ̣ ᔑꖎꖎᒷ↸:",
     "module_version": "ᒲ𝙹↸⚍ꖎᒷ  ⍊ᒷ∷ᓭ╎𝙹リ:",
@@ -11,7 +11,7 @@
     "balanced_desc": "ʖᔑꖎᔑリᓵᒷ  ʖᔑℸ ̣ ℸ ̣ ᒷ∷||  ᔑリ↸  !¡ᒷ∷⎓𝙹∷ᒲᔑリᓵᒷ",
     "performance_desc": "!¡∷╎𝙹∷╎ℸ ̣ ╎⨅╎リ⊣  !¡ᒷ∷⎓𝙹∷ᒲᔑリᓵᒷ  𝙹⍊ᒷ∷  ʖᔑℸ ̣ ℸ ̣ ᒷ∷||",
     "clear_desc": "ᓵꖎᒷᔑ∷  ∷ᔑᒲ  ʖ||  ꖌ╎ꖎꖎ╎リ⊣  ᔑꖎꖎ  ᔑ!¡!¡ᓭ",
-    "cooldown_desc": "ᓵ𝙹𝙹ꖎ  ↸𝙹∴リ  ||𝙹⚍∷  ↸ᒷ⍊╎ᓵᒷ\リ(ꖎᒷℸ ̣   ╎ℸ ̣   ∷ᒷᓭℸ ̣   ⎓𝙹∷  2  ᒲ╎リ⚍ℸ ̣ ᒷᓭ)",
+    "cooldown_desc": "ᓵ𝙹𝙹ꖎ  ↸𝙹∴リ  ||𝙹⚍∷ Device\n(ꖎᒷℸ ̣   ╎ℸ ̣   ∷ᒷᓭℸ ̣   ⎓𝙹∷  2  ᒲ╎リ⚍ℸ ̣ ᒷᓭ)",
     "gaming_desc": "ᓭᒷℸ ̣   ℸ ̣ 𝙹  !¡ᒷ∷⎓𝙹∷ᒲᔑリᓵᒷ  ᔑリ↸  ꖌ╎ꖎꖎ  ᔑꖎꖎ  ᔑ!¡!¡ᓭ",
     "power_save": "!¡𝙹∴ᒷ∷  ᓭᔑ⍊ᒷ",
     "balanced": "ʖᔑꖎᔑリᓵᒷ↸",
@@ -21,7 +21,7 @@
     "gaming_pro": "⊣ᔑᒲ╎リ⊣  !¡∷𝙹",
     "about_title": "ℸ ̣ ⍑ᔑリꖌ  ||𝙹⚍  ⎓𝙹∷  ℸ ̣ ⍑ᒷ  ⊣∷ᒷᔑℸ ̣   !¡ᒷ𝙹!¡ꖎᒷ  ∴⍑𝙹  ⍑ᒷꖎ!¡ᒷ↸  ╎ᒲ!¡∷𝙹⍊ᒷ  !¡∷𝙹⋮ᒷᓵℸ ̣   ∷ᔑᓵ𝙹:",
     "about_quote": "\"⊣∷ᒷᔑℸ ̣   ᓵ𝙹ꖎꖎᔑʖ𝙹∷ᔑℸ ̣ ╎𝙹リ  ꖎᒷᔑ↸  ℸ ̣ 𝙹  ⊣∷ᒷᔑℸ ̣   ╎リリ𝙹⍊ᔑℸ ̣ ╎𝙹リ\"\n~ Kanagawa Yamada (ᒲᔑ╎リ  ↸ᒷ⍊)",
-    "about_note": "!¡∷𝙹⋮ᒷᓵℸ ̣ Raco ╎ᓭ  ᔑꖎ∴ᔑ||ᓭ  ⎓∷ᒷᒷ,  𝙹!¡ᒷリ  ᓭ𝙹⚍∷ᓵᒷ,  ᔑリ↸  𝙹!¡ᒷリ  ⎓𝙹∷  ╎ᒲ!¡∷𝙹⍊ᒷᒲᒷリℸ ̣",
+    "about_note": "!¡∷𝙹⋮ᒷᓵℸ ̣   ∷ᔑᓵ𝙹  ╎ᓭ  ᔑꖎ∴ᔑ||ᓭ  ⎓∷ᒷᒷ,  𝙹!¡ᒷリ  ᓭ𝙹⚍∷ᓵᒷ,  ᔑリ↸  𝙹!¡ᒷリ  ⎓𝙹∷  ╎ᒲ!¡∷𝙹⍊ᒷᒲᒷリℸ ̣",
     "credits_1": "Rem01 Gaming",
     "credits_2": "MiAzami",
     "credits_3": "Kazuyoo",
@@ -60,7 +60,7 @@
     "reset_resolution": "∷ᒷᓭᒷℸ ̣   ℸ ̣ 𝙹  𝙹∷╎⊣╎リᔑꖎ",
     "hamada_ai_toggle_title": "ᒷリᔑʖꖎᒷ HAMADA AI",
     "hamada_ai_start_on_boot": "ᓭℸ ̣ ᔑ∷ℸ ̣   𝙹リ  ʖ𝙹𝙹ℸ ̣",
-    "edit_game_txt_title": "ᒷ↸╎ℸ ̣   ⊣ᔑᒲᒷ.ℸ ̣  ̇/ℸ ̣",
+    "edit_game_txt_title": "ᒷ↸╎ℸ ̣ game.txt",
     "sync_changes": "ᓭ||リᓵ  ᓵ⍑ᔑリ⊣ᒷᓭ",
     "save_button": "ᓭᔑ⍊ᒷ",
     "executing_command": "ᒷ ̇/ᒷᓵ⚍ℸ ̣ ╎リ⊣...",
@@ -89,9 +89,9 @@
     "bypass_charging_unsupported": "ʖ||!¡ᔑᓭᓭ  ᓵ⍑ᔑ∷⊣╎リ⊣  ╎ᓭ  リ𝙹ℸ ̣   ᓭ⚍!¡!¡𝙹∷ℸ ̣ ᒷ↸  𝙹リ  ||𝙹⚍∷  ↸ᒷ⍊╎ᓵᒷ",
     "bypass_charging_supported": "ʖ||!¡ᔑᓭᓭ  ᓵ⍑ᔑ∷⊣╎リ⊣  ╎ᓭ  ᓭ⚍!¡!¡𝙹∷ℸ ̣ ᒷ↸  𝙹リ  ||𝙹⚍∷  ↸ᒷ⍊╎ᓵᒷ",
     "mode_status_label": "ᒲ𝙹↸ᒷ:",
-    "mode_manual": "Manual",
+    "mode_manual": "ᒲᔑリ⚍ᔑꖎ",
     "mode_hamada_ai": "HamadaAI",
-    "please_disable_hamada_ai_first": "!¡ꖎᒷᔑᓭᒷ  ↸╎ᓭᔑʖꖎᒷ  ⍑ᔑᒲᔑ↸ᔑᔑ╎  ⎓╎∷ᓭℸ ̣",
+    "please_disable_hamada_ai_first": "!¡ꖎᒷᔑᓭᒷ  ↸╎ᓭᔑʖꖎᒷ HamadaAI ⎓╎∷ᓭℸ ̣",
     "background_settings_title": "ʖᔑᓵꖌ⊣∷𝙹⚍リ↸  ᓭᒷℸ ̣ ℸ ̣ ╎リ⊣ᓭ",
     "background_settings_description": "ᓵ⚍ᓭℸ ̣ 𝙹ᒲ╎⨅ᒷ  ℸ ̣ ⍑ᒷ  ᔑ!¡!¡'ᓭ  ʖᔑᓵꖌ⊣∷𝙹⚍リ↸  ╎ᒲᔑ⊣ᒷ,  𝙹!¡ᔑᓵ╎ℸ ̣ ||,  ᔑリ↸  ʖꖎ⚍∷  ᒷ⎓⎓ᒷᓵℸ ̣.",
     "opacity_slider_label": "ʖᔑᓵꖌ⊣∷𝙹⚍リ↸  𝙹!¡ᔑᓵ╎ℸ ̣ ||",
@@ -107,15 +107,15 @@
     "custom_governor_description": "ᓭᒷℸ ̣   ᓵ⚍ᓭℸ ̣ 𝙹ᒲ  ᓵ!¡⚍  ⊣𝙹⍊ᒷ∷リ𝙹∷,  ℸ ̣ ⍑╎ᓭ  ∴╎ꖎꖎ  ᓭᒷℸ ̣   ℸ ̣ ⍑ᒷ  ⊣𝙹⍊ᒷ∷リ𝙹∷  ╎リ  ʖᔑꖎᔑリᓵᒷ↸  ᒲ𝙹↸ᒷ",
     "loading_governors": "ꖎ𝙹ᔑ↸╎リ⊣  ⊣𝙹⍊ᒷ∷リ𝙹∷ᓭ...",
     "no_governor_selected": "リ𝙹リᒷ",
-    "anya_thermal_title": "ᔑリ||ᔑ  ᒲᒷꖎ⎓╎ᓭᓭᔑ  ↸╎ᓭᔑʖꖎᒷ  ℸ ̣ ⍑ᒷ∷ᒲᔑꖎ",
-    "anya_thermal_description": "↸╎ᓭᔑʖꖎᒷ  ℸ ̣ ⍑ᒷ∷ᒲᔑꖎ  𝙹リ  !¡ᒷ∷⎓𝙹∷ᒲᔑリᓵᒷ  ᔑリ↸  ⊣ᔑᒲ╎リ⊣,  ᒷリᔑʖꖎᒷ  ℸ ̣ ⍑ᒷ∷ᒲᔑꖎ  𝙹リ  !¡𝙹∴ᒷ∷ᓭᔑ⍊ᒷ,  ʖᔑꖎᔑリᓵᒷ↸,  ᓵ𝙹𝙹ꖎ  ↸𝙹∴リ.",
-    "anya_thermal_toggle_title": "ᒷリᔑʖꖎᒷ  ᔑリ||ᔑ  ℸ ̣ ⍑ᒷ∷ᒲᔑꖎ  ⎓ꖎ𝙹∴ᓭℸ ̣ ᔑℸ ̣ ᒷ",
+    "anya_thermal_title": "Anya Melfissa Disable Thermal",
+    "anya_thermal_description": "Disable Thermal on Performance and Gaming, Enable Thermal on Powersave, Balanced, Cool Down.",
+    "anya_thermal_toggle_title": "Enable Anya Thermal Flowstate",
     "system_actions_title": "ᓭ||ᓭℸ ̣ ᒷᒲ  ᔑᓵℸ ̣ ╎𝙹リᓭ",
-    "fstrim_title": "⎓ᓭℸ ̣ ∷╎ᒲ",
-    "fstrim_description": "ℸ ̣ ∷╎ᒲ  ᔑリ↸∷𝙹╎↸  !¡ᔑ∷ℸ ̣ ╎ℸ ̣ ╎𝙹リᓭ.",
-    "clear_cache_title": "ᓵꖎᒷᔑ∷  ᓵᔑᓵ⍑ᒷ",
+    "fstrim_title": "Fstrim",
+    "fstrim_description": "Trim Android partitions.",
+    "clear_cache_title": "ᓵꖎᒷᔑ∷ Cache",
     "better_powersave_title": "ʖᒷℸ ̣ ℸ ̣ ᒷ∷  !¡𝙹∴ᒷ∷ᓭᔑ⍊ᒷ",
-    "better_powersave_description": "ᓵᔑ!¡  ℸ ̣ ⍑ᒷ  ᓵ!¡⚍  ⎓∷ᒷᑑ  ℸ ̣ 𝙹  ⍑ᔑꖎ⎓  ╎リᓭℸ ̣ ᒷᔑ↸  𝙹⎓  ᒲ╎リ╎ᒲ⚍ᒲ  ⎓∷ᒷᑑ  (!¡𝙹∴ᒷ∷ᓭᔑ⍊ᒷ  ᒲ𝙹↸ᒷ  𝙹リꖎ||)",
+    "better_powersave_description": "ᓵᔑ!¡  ℸ ̣ ⍑ᒷ  ᓵ!¡⚍  ⎓∷ᒷᑑ  ℸ ̣ 𝙹  ⍑ᔑꖎ⎓  ╎リᓭℸ ̣ ᒷᔑ↸  𝙹⎓  ᒲ╎リ╎ᒲ⚍ᒲ  ⎓∷ᒷᑑ (Powersave ᒲ𝙹↸ᒷ  𝙹リꖎ||)",
     "build_version_title": "!¡∷𝙹⋮ᒷᓵℸ ̣ Raco: {buildName} Build",
     "@build_version_title": {
         "placeholders": {
@@ -124,7 +124,7 @@
             }
         }
     },
-    "build_by_title": "ʖ⚍╎ꖎ↸  ʖ||: {builderName}",
+    "build_by_title": "Build By: {builderName}",
     "@build_by_title": {
         "placeholders": {
             "builderName": {
